src/input.css
/*-------------- Font inter -----------*/
@import url("https://fonts.googleapis.com/css2?family=Amiri:ital,wght@0,400;0,700;1,400;1,700&family=Belleza&family=Crimson+Pro:ital,wght@1,200..900&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Gothic+A1&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Libre+Baskerville:ital,wght@0,400..700;1,400..700&family=Manrope:wght@200..800&family=Marcellus&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oswald:wght@200..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poor+Story&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto+Flex:opsz,wght,XOPQ,XTRA,YOPQ,YTDE,YTFI,YTLC,YTUC@8..144,100..1000,96,468,79,-203,738,514,712&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Syne:wght@400..800&family=Tinos:ital,wght@0,400;0,700;1,400;1,700&family=Zalando+Sans+SemiExpanded:ital,wght@0,200..900;1,200..900&display=swap");
/*-------------- font Charm ------------*/
@import url("https://fonts.googleapis.com/css2?family=Amiri:ital,wght@0,400;0,700;1,400;1,700&family=Belleza&family=Charm:wght@400;700&family=Crimson+Pro:ital,wght@1,200..900&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Gothic+A1&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Libre+Baskerville:ital,wght@0,400..700;1,400..700&family=Manrope:wght@200..800&family=Marcellus&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oswald:wght@200..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poor+Story&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto+Flex:opsz,wght,XOPQ,XTRA,YOPQ,YTDE,YTFI,YTLC,YTUC@8..144,100..1000,96,468,79,-203,738,514,712&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Syne:wght@400..800&family=Tinos:ital,wght@0,400;0,700;1,400;1,700&family=Zalando+Sans+SemiExpanded:ital,wght@0,200..900;1,200..900&display=swap");
/*------------- font Beiruti ----------*/
@import url("https://fonts.googleapis.com/css2?family=Amiri:ital,wght@0,400;0,700;1,400;1,700&family=Beiruti:wght@200..900&family=Belleza&family=Charm:wght@400;700&family=Crimson+Pro:ital,wght@1,200..900&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Gothic+A1&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Libre+Baskerville:ital,wght@0,400..700;1,400..700&family=Manrope:wght@200..800&family=Marcellus&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oswald:wght@200..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poor+Story&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto+Flex:opsz,wght,XOPQ,XTRA,YOPQ,YTDE,YTFI,YTLC,YTUC@8..144,100..1000,96,468,79,-203,738,514,712&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Syne:wght@400..800&family=Tinos:ital,wght@0,400;0,700;1,400;1,700&family=Zalando+Sans+SemiExpanded:ital,wght@0,200..900;1,200..900&display=swap");
/*------------- font inria serif ------------*/
@import url("https://fonts.googleapis.com/css2?family=Amiri:ital,wght@0,400;0,700;1,400;1,700&family=Beiruti:wght@200..900&family=Belleza&family=Charm:wght@400;700&family=Crimson+Pro:ital,wght@1,200..900&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Gothic+A1&family=Inria+Serif:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Libre+Baskerville:ital,wght@0,400..700;1,400..700&family=Manrope:wght@200..800&family=Marcellus&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oswald:wght@200..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poor+Story&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto+Flex:opsz,wght,XOPQ,XTRA,YOPQ,YTDE,YTFI,YTLC,YTUC@8..144,100..1000,96,468,79,-203,738,514,712&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Syne:wght@400..800&family=Tinos:ital,wght@0,400;0,700;1,400;1,700&family=Zalando+Sans+SemiExpanded:ital,wght@0,200..900;1,200..900&display=swap");
/*------------- Font Angkor --------------*/
@import url("https://fonts.googleapis.com/css2?family=Amiri:ital,wght@0,400;0,700;1,400;1,700&family=Angkor&family=Beiruti:wght@200..900&family=Belleza&family=Charm:wght@400;700&family=Crimson+Pro:ital,wght@1,200..900&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Gothic+A1&family=Inria+Serif:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Libre+Baskerville:ital,wght@0,400..700;1,400..700&family=Manrope:wght@200..800&family=Marcellus&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oswald:wght@200..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poor+Story&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto+Flex:opsz,wght,XOPQ,XTRA,YOPQ,YTDE,YTFI,YTLC,YTUC@8..144,100..1000,96,468,79,-203,738,514,712&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Syne:wght@400..800&family=Tinos:ital,wght@0,400;0,700;1,400;1,700&family=Zalando+Sans+SemiExpanded:ital,wght@0,200..900;1,200..900&display=swap");
/*-------------- Font Arial -----------*/
@font-face {
  font-family: Arial;
  src: url("../public/font/Arial\ Regular.ttf");
}
/*-------------- Font Bell MT Regular ---------*/
@font-face {
  font-family: Bell-MT-Regular;
  src: url("../public/font/Bell\ MT\ Regular.otf");
}
/*---------------- Font BELL MT Italic ---------------*/
@font-face {
  font-family: Bell-MT-Italic;
  src: url("../public/font/Bell\ MT\ Italic.otf");
}
/*-------------- Font BELL MT Bold -----------------*/
@font-face {
  font-family: Bell-MT-Bold;
  src: url("../public/font/Bell\ MT\ Bold.otf");
}
@import "tailwindcss";
@theme {
  --font-inter: "Inter", sans-serif;
  --font-Arial: Arial;
  --font-Charm: "Charm", cursive;
  --font-Beiruti: "Beiruti", sans-serif;
  --font-inria-serif: "Inria Serif", serif;
  --font-Angkor: "Angkor", serif;
  --font-Bell-MT: Bell-MT-Regular;
  --font-Bell-MT-Italic: Bell-MT-Italic;
  --font-Bell-MT-Bold: Bell-MT-Bold;
  --color-nav-link: #272727;
  --breakpoint-es: 320px;
  --breakpoint-my: 416px;
  --breakpoint-sm: 576px;
  --breakpoint-md: 768px;
  --breakpoint-lg: 992px;
  --breakpoint-xl: 1200px;
  --breakpoint-xxl: 1400px;
  --shadow-custom-shadow: 0 4px 4px 0 rgba(0, 0, 0, 25%);
}
@layer components {
  .no-scroll {
    overflow: hidden;
    height: 100vh;
  }
  .header-btm {
    position: -webkit-sticky;
  }
  .nav-sticky {
    position: fixed;
    width: 100%;
    left: 0;
    top: 0;
    right: 0;
    z-index: 999;
  }
  .cmn-container {
    @apply max-w-[1952px] mx-auto px-4 w-full;
  }
  .bnr-container {
    @apply max-w-[1632px] w-full mx-auto px-4;
  }
  .sort-container {
    @apply max-w-[1400px] w-full mx-auto px-4;
  }
  .bnner-bg {
    @apply bg-cover bg-center bg-no-repeat min-h-[100%];
    background-image: url("../public/assets/bnr-img.png");
  }
  .bnner-bg-1 {
    @apply bg-cover bg-center bg-no-repeat;
    background-image: url("../public/assets/bnnr-bg-2.png");
  }
  .bnner-bg-2 {
    @apply bg-cover bg-center bg-no-repeat;
    background-image: url("../public/assets/bnner-bg-3.png");
  }
  .bnner-bg-3 {
    @apply bg-cover bg-center bg-no-repeat;
    background-image: url("../public/assets/bnnr-bg-4.png");
  }
  .bnrSwiper,
  .swiper-wrapper,
  .swiper-slide {
    height: 100%;
  }
  .new-lunch {
    @apply bg-cover bg-center bg-no-repeat;
    background-image: url("../public/assets/new-lunch.png");
  }
  .new-lunch-1 {
    @apply bg-cover bg-center bg-no-repeat;
    background-image: url("../public/assets/new-lunch-1.png");
  }
  .fire-place-bg {
    @apply bg-cover bg-center bg-no-repeat;
    background-image: url("../public/assets/by-fire-place.png");
  }
  .custom-card-1 {
    @apply bg-cover bg-center bg-no-repeat;
    background-image: url("../public/assets/by-last-card-1.png");
  }
  .custom-card-2 {
    @apply bg-cover bg-center bg-no-repeat;
    background-image: url("../public/assets/by-last-card-2.png");
  }
  .custom-card-3 {
    @apply bg-cover bg-center bg-no-repeat;
    background-image: url("../public/assets/by-last-card-3.png");
  }
  .shop-bnner-bg {
    @apply bg-cover bg-center bg-no-repeat;
    background-image: url("../public/assets/shop-bnr-bg.png");
  }
  .about-bnner-bg {
    @apply bg-cover bg-center bg-no-repeat;
    background-image: url("../public/assets/about-bg.png");
  }
}
@layer utilities {
  @keyframes scroll {
    0% {
      transform: translateX(0);
    }
    100% {
      transform: translateX(-50%);
    }
  }

  .animate-scroll {
    animation: scroll 10s linear infinite;
  }
}
@layer utilities {
  @keyframes scroll {
    0% {
      transform: translateX(0);
    }
    100% {
      transform: translateX(-50%);
    }
  }
  .img-scroll {
    animation: scroll 20s linear infinite;
  }
}

